--- a/www/source/partials/docs/_bp-iterative-development.html.md.erb
+++ b/www/source/partials/docs/_bp-iterative-development.html.md.erb
@@ -6,7 +6,7 @@ significantly shorten the cycle time when working on configuration and applicati
 
 Build the plan as you normally would. When you start the Supervisor, pass the name of the directory with your plan inside it:
 
-```
+```shell
 $ hab start core/redis --config-from /src
 ```
 
