--- a/www/source/partials/docs/_internals-bootstrapping.html.md.erb
+++ b/www/source/partials/docs/_internals-bootstrapping.html.md.erb
@@ -25,11 +25,11 @@ The entire tarball of bootstrap "tools" lives inside the [stage1 studio](https:/
 
 From time to time and especially with breaking changes to `hab`’s core behavior it is a good idea to update the software in the `habitat-studio-stage1` tarball, even if that means skipping the work of rebuilding the toolchain.
 
-~~~
+```shell
 > docker run --rm -ti -v `pwd`:/src ubuntu:xenial bash
-~~~
+```
 
-~~~
+```bash
 # Install xz tools
 apt-get update && apt-get install -y xz-utils
 
@@ -52,89 +52,89 @@ tail -n +6 $hart \
 dst=/src/habitat-studio-stage1-$(date -u +%Y%m%d%H%M%S).tar.xz
 mv ${tarxz/.xz/} ${dst/.xz/}
 xz --compress -9 --threads=0 --verbose ${dst/.xz/}
-~~~
+```
 
 ## Part III: Stage 1
 
 In this stage, we rebuild all the base packages needed by Habitat using the tools (compiler, etc.) from the existing tools tarball. You will need to have a depot locally running on your system, the latest version of the studio, and you'll need a copy of the core-plans on your local disk.
 
-~~~
-rm -rf /hab
-./components/hab/install.sh
-hab install ~ubuntu/results/core-hab-studio-0.6.0-20160701030246-x86_64-linux.hart
-hab origin key generate core
-~~~
+```shell
+$ rm -rf /hab
+$ ./components/hab/install.sh
+$ hab install ~ubuntu/results/core-hab-studio-0.6.0-20160701030246-x86_64-linux.hart
+$ hab origin key generate core
+```
 
-~~~
-git clone https://github.com/habitat-sh/core-plans.git plans
-~~~
+```shell
+$ git clone https://github.com/habitat-sh/core-plans.git plans
+```
 
-~~~
-export STUDIO_TYPE=stage1
-export HAB_STUDIO_ROOT=/hab/studios/stage1
-export HAB_ORIGIN=core
-hab studio enter
-~~~
+```shell
+$ export STUDIO_TYPE=stage1
+$ export HAB_STUDIO_ROOT=/hab/studios/stage1
+$ export HAB_ORIGIN=core
+$ hab studio enter
+```
 
 Now in the stage1 Studio:
 
-~~~
-export BUILD=/src/components/plan-build/bin/hab-plan-build.sh
-export NO_INSTALL_DEPS=true
-export DB_PREFIX=stage1-
-rm -f /src/plans/tmp/${DB_PREFIX}*.db
-cd /src/plans
+```studio
+$ export BUILD=/src/components/plan-build/bin/hab-plan-build.sh
+$ export NO_INSTALL_DEPS=true
+$ export DB_PREFIX=stage1-
+$ rm -f /src/plans/tmp/${DB_PREFIX}*.db
+$ cd /src/plans
 
-time record ${DB_PREFIX}base make base
-~~~
+$ time record ${DB_PREFIX}base make base
+```
 
-~~~
-$BUILD libarchive
-$BUILD libsodium
-$BUILD zeromq
-$BUILD ../components/depot
-~~~
+```studio
+$ $BUILD libarchive
+$ $BUILD libsodium
+$ $BUILD zeromq
+$ $BUILD ../components/depot
+```
 
-~~~
-hab origin key upload -z userkey -u http://127.0.0.1:9632/v1 \
+```studio
+$ hab origin key upload -z userkey -u http://127.0.0.1:9632/v1 \
   /hab/cache/keys/core-*.pub
-ls -1 launch-stage1-base-harts/*.hart \
+$ ls -1 launch-stage1-base-harts/*.hart \
   | while read hart; do hab pkg up -z userkey -u http://127.0.0.1:9632/v1 $hart; done
-~~~
+```
 
 ## Part IV: Stage 2
 
 In this stage, we rebuild all the base packages needed by Habitat using the tools (compiler, etc.) from the previous stage, thus making the system self-sustaining.
 
-~~~
-export STUDIO_TYPE=default
-export HAB_STUDIO_ROOT=/hab/studios/stage2
-export HAB_ORIGIN=core
-export HAB_DEPOT_URL=http://127.0.0.1:9632/v1
-hab studio enter
-~~~
+```shell
+$ export STUDIO_TYPE=default
+$ export HAB_STUDIO_ROOT=/hab/studios/stage2
+$ export HAB_ORIGIN=core
+$ export HAB_DEPOT_URL=http://127.0.0.1:9632/v1
+$ hab studio enter
+```
 
-~~~
-export DB_PREFIX=stage2-
-rm -f /src/plans/tmp/${DB_PREFIX}*.db
-cd /src/plans
+```studio
+$ export DB_PREFIX=stage2-
+$ rm -f /src/plans/tmp/${DB_PREFIX}*.db
+$ cd /src/plans
 
-time record ${DB_PREFIX}base make base
-~~~
+$ time record ${DB_PREFIX}base make base
+```
 
-~~~
-build libarchive
-build libsodium
-build zeromq
-build ../components/depot
-~~~
+```studio
+$ build libarchive
+$ build libsodium
+$ build zeromq
+$ build ../components/depot
+```
 
-~~~
-hab origin key upload -z userkey -u http://127.0.0.1:9632/v1 \
+```studio
+$ hab origin key upload -z userkey -u http://127.0.0.1:9632/v1 \
   /hab/cache/keys/core-*.pub
-ls -1 launch-stage2-base-harts/*.hart \
+$ ls -1 launch-stage2-base-harts/*.hart \
   | while read hart; do hab pkg up -z userkey -u http://127.0.0.1:9632/v1 $hart; done
-~~~
+```
 
 ## Part V: Remaining packages in world
 
@@ -142,27 +142,27 @@ In this stage, we rebuild all of the remaining packages using the base packages 
 
 Update build host now:
 
-~~~
-hab install ~ubuntu/launch-stage2-base-harts/core-hab-0.6.0-20160612082139-x86_64-linux.hart
-hab pkg binlink core/hab hab
-hab install ~ubuntu/launch-stage2-base-harts/core-hab-studio-0.6.0-20160612082608-x86_64-linux.hart
-~~~
+```shell
+$ hab install ~ubuntu/launch-stage2-base-harts/core-hab-0.6.0-20160612082139-x86_64-linux.hart
+$ hab pkg binlink core/hab hab
+$ hab install ~ubuntu/launch-stage2-base-harts/core-hab-studio-0.6.0-20160612082608-x86_64-linux.hart
+```
 
-~~~
-apt-get update
-apt-get install -y ruby2.0
-find . -name plan.sh | ruby2.0 ./plans/build_order.rb --without-base | cut -d ' ' -f 2 > world_build_order
-cp world_build_order all_order
-~~~
+```shell
+$ apt-get update
+$ apt-get install -y ruby2.0
+$ find . -name plan.sh | ruby2.0 ./plans/build_order.rb --without-base | cut -d ' ' -f 2 > world_build_order
+$ cp world_build_order all_order
+```
 
-~~~
-export STUDIO_TYPE=default
-export HAB_STUDIO_ROOT=/hab/studios/stage3
-export HAB_ORIGIN=core
-export HAB_DEPOT_URL=http://127.0.0.1:9632/v1
-hab studio enter
-~~~
+```shell
+$ export STUDIO_TYPE=default
+$ export HAB_STUDIO_ROOT=/hab/studios/stage3
+$ export HAB_ORIGIN=core
+$ export HAB_DEPOT_URL=http://127.0.0.1:9632/v1
+$ hab studio enter
+```
 
-~~~
-time { cat all_order | while read plan; do build $plan || break; done }
-~~~
+```studio
+$ time { cat all_order | while read plan; do build $plan || break; done }
+```
