--- a/www/source/partials/docs/_quickstart.html.md.erb
+++ b/www/source/partials/docs/_quickstart.html.md.erb
@@ -25,10 +25,10 @@ Now that we have our workstation configured lets take a sample rails app we woul
 Start by cloning down the heroku ruby rails sample app, change directories into its root and run the `hab plan init` command.
 
 
-```terminal
-    $ git clone git@github.com:heroku/ruby-rails-sample.git
-    $ cd ruby-rails-sample
-    $ hab plan init
+```shell
+$ git clone git@github.com:heroku/ruby-rails-sample.git
+$ cd ruby-rails-sample
+$ hab plan init
 ```
 
 This will dump out a mostly empty
