--- a/www/source/partials/docs/_reference-utility-functions.html.md.erb
+++ b/www/source/partials/docs/_reference-utility-functions.html.md.erb
@@ -20,27 +20,27 @@ Any valid `wget` URL will work.
 
 Downloads every time, even if the file exists locally:
 
-~~~
+```bash
 download_file http://example.com/file.tar.gz file.tar.gz
-~~~
+```
 
 Downloads if no local file is found:
 
-~~~
+```bash
 download_file http://example.com/file.tar.gz file.tar.gz abc123...
-~~~
+```
 
 File matches checksum: download is skipped, local file is used:
 
-~~~
+```bash
 download_file http://example.com/file.tar.gz file.tar.gz abc123...
-~~~
+```
 
 File doesn't match checksum: local file removed, download attempted:
 
-~~~
+```bash
 download_file http://example.com/file.tar.gz file.tar.gz ohnoes...
-~~~
+```
 
 Will return 0 if a file was downloaded or if a valid cached file was found.
 
@@ -49,9 +49,9 @@ Will return 0 if a file was downloaded or if a valid cached file was found.
 
   Here's an example of how to use this function to retrieve the path to the perl binary in the core/perl package:
 
-  ~~~
-  _perl_path="$(pkg_path_for core/perl)/bin/perl"
-  ~~~
+```bash
+_perl_path="$(pkg_path_for core/perl)/bin/perl"
+```
 
 **fix_interpreter()**
 : Edits the `#!` shebang of the target file in-place. This is useful for changing hardcoded paths defined by your source files to the equivalent path in a Habitat package. You must include the required package that provides the expected path for the shebang in pkg_deps. This function performs a greedy match against the specified interpreter in the target file(s).
@@ -63,24 +63,24 @@ Will return 0 if a file was downloaded or if a valid cached file was found.
 
   For example, to replace all the files in `node_modules/.bin` that have `#!/usr/bin/env` with the coreutils path to `bin/env` (/hab/pkgs/core/coreutils/8.24/20160219013458/bin/env), you must quote the wildcard target as shown below.
 
-  ~~~
+  ```bash
   fix_interpreter "node_modules/.bin/*" core/coreutils bin/env
-  ~~~
+  ```
 
   For a single target, reference the file directly:
 
-  ~~~
+  ```bash
   fix_interpreter node_modules/.bin/concurrent core/coreutils bin/env
-  ~~~
+  ```
 
 **pkg\_interpreter\_for()**
 : Returns the path for the given package and interpreter by reading it from the INTERPRETERS metadata in the package. The directory of the interpreter needs to be specified, as an interpreter binary might live in `bin`, `sbin`, or `libexec`, depending on the software.
 
   The following shows how to call pkg_interpreter_for with the package and interpreter arguments specified.
 
-  ~~~
+  ```bash
   pkg_interpreter_for core/coreutils bin/env
-  ~~~
+  ```
 
   This function will return 0 if the specified package and interpreter were found, and 1 if the package could not be found or the interpreter is not specified for that package.
 
@@ -94,7 +94,7 @@ This plan concatenates a static file in the source root of the
 project to determine the version in the
 `do_before()` phase:
 
-~~~
+```bash
 pkg_version() {
   cat "$SRC_PATH/version.txt"
 }
@@ -103,7 +103,7 @@ do_before() {
   do_default_before
   update_pkg_version
 }
-~~~
+```
 
 The `pkg_version()` function in this plan uses grep and sed before using the
 date binary to format the final version string to standard output. As
@@ -111,7 +111,7 @@ the downloaded file is required before running the version logic, the
 `update_pkg_version()` helper is called in the `do_download()` build
 phase:
 
-~~~
+```bash
 pkg_version() {
   local build_date
 
@@ -127,7 +127,7 @@ do_download() {
   do_default_download
   update_pkg_version
 }
-~~~
+```
 
 **abspath()**
 : Return the absolute path for a path, which might be absolute or relative.
@@ -138,31 +138,31 @@ do_download() {
 **build_line()**
 : Print a line of build output. Takes a string as its only argument.
 
-~~~
+```
 build_line "Checksum verified - ${pkg_shasum}"
-~~~
+```
 
 **warn()**
 : Print a warning line on stderr. Takes a string as its only argument.
 
-~~~
+```
 warn "Checksum failed"
-~~~
+```
 
 **debug()**
 : Prints a line only if the `$DEBUG` environment value is set to 1. The `debug` function takes a string as its only argument.
 
-~~~
+```bash
 DEBUG=1
 debug "Only if things are set"
-~~~
+```
 
 **exit_with()**
 : Exits the program with an error message and a status code.
 
-~~~
+```bash
 exit_with "Something bad happened" 55
-~~~
+```
 
 **trim()**
 : Trims leading and trailing whitespace characters from a bash variable.
@@ -170,7 +170,7 @@ exit_with "Something bad happened" 55
 **record()**
 : Takes a session name and command to run as arguments function appends a timestamp to the log file. Alternative to piping build through tee.
 
-~~~
-Usage: record <SESSION> [CMD [ARG ...]]
+```bash
+# Usage: record <SESSION> [CMD [ARG ...]]
 record mysoftware build /src/mysoftware
-~~~
+```
