--- a/www/source/partials/docs/_using-hab-file-uploads.html.md.erb
+++ b/www/source/partials/docs/_using-hab-file-uploads.html.md.erb
@@ -9,7 +9,9 @@ File updates for service groups must be versioned. The version number must be an
 
 Here are some examples of how to upload a file to the ring:
 
-    $ hab file upload myapp.prod 1 /tmp/yourfile.txt --peer 172.0.0.3
+```shell
+$ hab file upload myapp.prod 1 /tmp/yourfile.txt --peer 172.0.0.3
+```
 
   > Note: 1 is the version number. Increment this for additional configuration updates.
 
