--- a/www/source/partials/docs/_using-hab-topologies.html.md.erb
+++ b/www/source/partials/docs/_using-hab-topologies.html.md.erb
@@ -12,11 +12,15 @@ In a leader-follower topology, one of the members of the service group is electe
 
 As with any topology using leader election, you must start at least three peers using the `--topology leader` flag to the Supervisor.
 
-    hab start yourname/yourdb --topology leader --group production
+```shell
+$ hab start yourname/yourdb --topology leader --group production
+```
 
 The first Supervisor will block until it has quorum. You would start additional members by pointing them at the ring, using the `--peer` argument:
 
-    hab start yourname/yourdb --topology leader --group production --peer 192.168.5.4
+```shell
+$ hab start yourname/yourdb --topology leader --group production --peer 192.168.5.4
+```
 
 > Note: The `--peer` service does not need to be a peer that is in the same service group; it merely needs to be in the same ring that the other member(s) are in.
 
@@ -26,7 +30,9 @@ Once you have quorum, one member is elected a leader, the Supervisors in the ser
 
 Within a leader-follower topology it is possible to get into a partitioned state where nodes are unable to achieve quorum. To solve this a permanent peer can be used to heal the netsplit. To set this pass the `--permanent-peer` option, or it's short form `-I`, to the Supervisor.
 
-    hab start yourname/yourdb --topology leader --group production --permanent-peer
+```shell
+$ hab start yourname/yourdb --topology leader --group production --permanent-peer
+```
 
 When this is used we will attempt to ping the permanent peer and achieve quorum, even if they are confirmed dead.
 
@@ -36,10 +42,12 @@ The notion of a permanent peer is an extension to the original [SWIM](https://ww
 
 Habitat allows you to use the same immutable package in different deployment scenarios. Here is an example of a configuration template with conditional logic that will cause the running application to behave differently based on whether it is a leader or a follower:
 
-    {{#if svc.me.follower}}
-       {{#with svc.leader as |leader|}}
-         slaveof {{leader.sys.ip}} {{leader.cfg.port}}
-       {{/with}}
-    {{/if}}
+```handlebars
+{{#if svc.me.follower}}
+   {{#with svc.leader as |leader|}}
+     slaveof {{leader.sys.ip}} {{leader.cfg.port}}
+   {{/with}}
+{{/if}}
+```
 
 This logic says that if this peer is a follower, it will become a read replica of the IP and port of service leader (`svc.leader`), which is has found by service discovery through the ring. However, if this peer is the leader, the entire list of statements here evaluate to empty text -- meaning that the peer starts up as the leader.
