--- a/www/source/partials/global/_download-and-install.slim
+++ b/www/source/partials/global/_download-and-install.slim
@@ -25,10 +25,10 @@ p From building packages to running services, everything in Habitat is done thro
 
       p Habitat can also be installed with Homebrew, by running the following commands:
 
-      pre
-        code
-          | brew tap habitat-sh/habitat
-            brew install hab
+      = code(:shell) do
+          |
+           $ brew tap habitat-sh/habitat
+           $ brew install hab
 
     .buttons.small-12.large-4.columns
       = link_to 'Download Habitat for Mac', 'https://api.bintray.com/content/habitat/stable/darwin/x86_64/hab-%24latest-x86_64-darwin.zip?bt_package=hab-x86_64-darwin', class: 'button cta'
@@ -44,13 +44,13 @@ p From building packages to running services, everything in Habitat is done thro
 
       p Once you have downloaded the <code>hab</code> CLI, unzip it onto your machine. We suggest unzipping to <code>C:\habitat</code> and then adding that folder to your <code>PATH</code> variable. Here’s how to do that with Powershell:
 
-      pre
-        code $env:PATH += ";C:\habitat"
+      = code(:powershell) do
+        | $ $env:PATH += ";C:\habitat"
 
       p Habitat can also be installed with Chocolatey, by running the following command:
 
-      pre
-        code choco install habitat
+      = code(:powershell) do
+        | $ choco install habitat
 
     .buttons.small-12.large-4.columns
       = link_to 'Download Habitat for Windows', 'https://api.bintray.com/content/habitat/stable/windows/x86_64/hab-%24latest-x86_64-windows.zip?bt_package=hab-x86_64-windows', class: 'button cta'
