--- a/www/source/partials/global/_iterative_development.html.md.erb
+++ b/www/source/partials/global/_iterative_development.html.md.erb
@@ -5,7 +5,7 @@ significantly shorten the cycle time when working on configuration and hooks.
 
 Start the Supervisor from within the studio and pass the name of the directory with your plan inside it:
 
-```
+```shell
 $ hab start origin/package --config-from /src
 ```
 
