--- a/www/source/partials/tutorials/_create_plan_build_output_sample_app.html.md.erb
+++ b/www/source/partials/tutorials/_create_plan_build_output_sample_app.html.md.erb
@@ -1,15 +1,15 @@
-```console
+```studio
 sample-rails-app: hab-plan-build cleanup
-sample-rails-app: 
+sample-rails-app:
 sample-rails-app: Source Path: /src
 sample-rails-app: Installed Path: /hab/pkgs/dwrede/sample-rails-app/0.1.0/20170624214244
 sample-rails-app: Artifact: /src/results/dwrede-sample-rails-app-0.1.0-20170624214244-x86_64-linux.hart
 sample-rails-app: Build Report: /src/results/last_build.env
 sample-rails-app: SHA256 Checksum: af5651f70faed95ec01c51e575e6ee3e8efdbe1eb0bf830248fb40b264d17082
 sample-rails-app: Blake2b Checksum: ccf2dcd9c881cdf0c27746e6dcddc29e1873d29a8065dbb2024c5fa0cfc69b84
-sample-rails-app: 
+sample-rails-app:
 sample-rails-app: I love it when a plan.sh comes together.
-sample-rails-app: 
+sample-rails-app:
 sample-rails-app: Build time: 3m51s
 [4][default:/src:0]#
 ```
