--- a/www/source/partials/tutorials/_update_app_output_1.html.md.erb
+++ b/www/source/partials/tutorials/_update_app_output_1.html.md.erb
@@ -1,20 +1,20 @@
-~~~console
+```shell
 railsapp_1  | sample-rails-app.default(SR): Initializing
 railsapp_1  | sample-rails-app.default hook[init]:(HK): Database connection failed: FATAL:  database "sample-rails-app_production" does not exist
-railsapp_1  | sample-rails-app.default hook[init]:(HK): 
+railsapp_1  | sample-rails-app.default hook[init]:(HK):
 railsapp_1  | sample-rails-app.default hook[init]:(HK): A database connection is required for this app to properly boot.
 railsapp_1  | sample-rails-app.default hook[init]:(HK): Is the database not running or are the database connection
 railsapp_1  | sample-rails-app.default hook[init]:(HK): credentials incorrect?
-railsapp_1  | sample-rails-app.default hook[init]:(HK): 
+railsapp_1  | sample-rails-app.default hook[init]:(HK):
 railsapp_1  | sample-rails-app.default hook[init]:(HK): This app started with a database bind and will discovery the
 railsapp_1  | sample-rails-app.default hook[init]:(HK): hostname and port number in the Habitat ring.
-railsapp_1  | sample-rails-app.default hook[init]:(HK): 
+railsapp_1  | sample-rails-app.default hook[init]:(HK):
 railsapp_1  | sample-rails-app.default hook[init]:(HK): There are 3 remaining config settings which must be set correctly:
-railsapp_1  | sample-rails-app.default hook[init]:(HK): 
+railsapp_1  | sample-rails-app.default hook[init]:(HK):
 railsapp_1  | sample-rails-app.default hook[init]:(HK):  * db.user      - The database username (Current: admin)
 railsapp_1  | sample-rails-app.default hook[init]:(HK):  * db.password  - The database password (Current: <set>)
 railsapp_1  | sample-rails-app.default hook[init]:(HK):  * db.name      - The database name (Current: sample-rails-app_production)
-railsapp_1  | sample-rails-app.default hook[init]:(HK): 
+railsapp_1  | sample-rails-app.default hook[init]:(HK):
 railsapp_1  | sample-rails-app.default hook[init]:(HK): Aborting...
 railsapp_1  | sample-rails-app.default(HK): Initialization failed! 'init' exited with status code 15
-~~~
+```
