--- a/www/source/partials/tutorials/_update_app_output_2.html.md.erb
+++ b/www/source/partials/tutorials/_update_app_output_2.html.md.erb
@@ -1,4 +1,4 @@
-~~~console
+```shell
 railsapp_1  | sample-rails-app.default(SR): Initializing
 railsapp_1  | sample-rails-app.default(SV): Starting service as user=hab, group=hab
 railsapp_1  | sample-rails-app.default hook[health_check]:(HK): curl: (7) Failed to connect to localhost port 8000: Connection refused
@@ -11,4 +11,4 @@ railsapp_1  | sample-rails-app.default(O): * Min threads: 5, max threads: 5
 railsapp_1  | sample-rails-app.default(O): * Environment: production
 railsapp_1  | sample-rails-app.default(O): * Listening on tcp://0.0.0.0:8000
 railsapp_1  | sample-rails-app.default(O): Use Ctrl-C to stop
-~~~
+```
