--- a/www/source/partials/tutorials/_update_app_rake_output.html.md.erb
+++ b/www/source/partials/tutorials/_update_app_rake_output.html.md.erb
@@ -1,4 +1,4 @@
-~~~
+```shell
 Created database 'sample-rails-app_production'
 -- enable_extension("plpgsql")
 D, [2017-07-17T19:40:25.811350 #118] DEBUG -- :   SQL (1.9ms)  CREATE EXTENSION IF NOT EXISTS "plpgsql"
@@ -29,4 +29,4 @@ D, [2017-07-17T19:40:25.944323 #118] DEBUG -- :    (1.9ms)  INSERT INTO page_upd
  ('Always have a plan'),
  ('We .hart you!'),
  ('Have a .hart');
-~~~
+```
