--- a/www/source/partials/tutorials/_web_guide_gradle_defaulttoml.slim
+++ b/www/source/partials/tutorials/_web_guide_gradle_defaulttoml.slim
@@ -1,7 +1,6 @@
 p For example, the #{current_page.data.platform} scaffolding creates the following <code>default.toml</code> file.
 
-pre
- code
+= code(:toml) do
   |
    # Default values that can be updated.
 
