--- a/www/source/partials/tutorials/_web_guide_node_defaulttoml.slim
+++ b/www/source/partials/tutorials/_web_guide_node_defaulttoml.slim
@@ -1,7 +1,6 @@
 p For example, the Node.js scaffolding creates the following <code>default.toml</code> file.
 
-pre
- code
+= code(:toml, title: 'habitat/default.toml') do
   |
    # Default values that can be updated.
 
