--- a/www/source/partials/tutorials/_web_guide_node_specify_processes_plan.slim
+++ b/www/source/partials/tutorials/_web_guide_node_specify_processes_plan.slim
@@ -1,5 +1,4 @@
-pre
-  code
+= code(:bash, title: 'habitat/plan.sh') do
    |
     declare -A scaffolding_process_bins
     # Override the default web process
