--- a/www/source/partials/tutorials/_web_guide_ruby_db_setup.slim
+++ b/www/source/partials/tutorials/_web_guide_ruby_db_setup.slim
@@ -1,4 +1,5 @@
-pre
-  code $ docker exec -it CONTAINERID yourapp-rake db:setup
+= code(:shell) do
+  |
+   $ docker exec -it CONTAINERID yourapp-rake db:setup
 
 p Once this successfully completes, head back to your browser, navigate to https://localhost:8000/someendpoint to view your web application connected to a PostgreSQL cluster.
