--- a/www/source/partials/tutorials/_web_guide_ruby_defaulttoml.slim
+++ b/www/source/partials/tutorials/_web_guide_ruby_defaulttoml.slim
@@ -1,7 +1,6 @@
 p For example, the Ruby scaffolding creates the following <code>default.toml</code> file for a Rails app that has a PostgreSQL database configured in the <code>config/database.yml</code> file for the app.
 
-pre
- code
+= code(:toml, title: 'habitat/default.toml') do
   |
    # Rails' secret key base is required and must be non-empty
    # You can run 'rails secret' in development to generate
