--- a/www/source/partials/tutorials/_web_guide_ruby_nginx_docker.slim
+++ b/www/source/partials/tutorials/_web_guide_ruby_nginx_docker.slim
@@ -1,7 +1,6 @@
 p If you have already completed the tutorial and want to test this out on the sample-rails-app web application, start both the database and the mywebapp containers using Docker Compose and then start up your reverse proxy container.
- 
-pre
- code
-  | 
+
+= code(:shell) do
+  |
    $ cd path/to/tutorial/directory/
    $ docker-compose up
