--- a/www/source/partials/docs/_bp-ecs-and-habitat.html.md.erb
+++ b/www/source/partials/docs/_bp-ecs-and-habitat.html.md.erb
@@ -6,29 +6,35 @@ Amazon Web Services provides a container management service called [EC2 Containe
 
 [EC2 Container Registry (ECR)](https://aws.amazon.com/ecr/) is a fully-managed Docker registry provided by Amazon Web Services. Applications exported to Docker with ```hab pkg export docker``` put the containers into namespaced repositories, so you will need to create these within ECR. For example, if you were building ```core/mongodb``` containers you would use the following command:
 
-    $ aws ecr create-repository --repository-name core/mongodb
+```shell
+$ aws ecr create-repository --repository-name core/mongodb
+```
 
 To tag and push the images to the ECR you will use your Repository URI (substituting your **aws_account_id** and availability zone).
 
-    $ docker tag core/mongodb:latest aws_account_id.dkr.ecr.ap-southeast-2.amazonaws.com/core/mongodb:latest
-    $ docker push aws_account_id.dkr.ecr.ap-southeast-2.amazonaws.com/core/mongodb:latest
+```shell
+$ docker tag core/mongodb:latest aws_account_id.dkr.ecr.ap-southeast-2.amazonaws.com/core/mongodb:latest
+$ docker push aws_account_id.dkr.ecr.ap-southeast-2.amazonaws.com/core/mongodb:latest
+```
 
 ## EC2 Compute Service
 
 Once Docker images are pushed to ECR, they may be run on Amazon's ECS within a [Task Definition](http://docs.aws.amazon.com/AmazonECS/latest/developerguide/task_defintions.html) which may be expressed as a [Docker Compose file](http://docs.aws.amazon.com/AmazonECS/latest/developerguide/cmd-ecs-cli-compose.html). Here is an example of a Tomcat application using a Mongo database demonstrating using Habitat-managed containers:
 
-    version: '2'
-    services:
-      mongo:
-        image: aws_account_id.dkr.ecr.ap-southeast-2.amazonaws.com/billmeyer/mongodb:latest
-        hostname: "mongodb"
-      national-parks:
-        image: aws_account_id.dkr.ecr.ap-southeast-2.amazonaws.com/mattray/national-parks:latest
-        ports:
-          - "8080:8080"
-        links:
-          - mongo
-        command: --peer mongodb --bind database:mongodb.default
+```yaml docker-compose.yml
+version: '2'
+services:
+  mongo:
+    image: aws_account_id.dkr.ecr.ap-southeast-2.amazonaws.com/billmeyer/mongodb:latest
+    hostname: "mongodb"
+  national-parks:
+    image: aws_account_id.dkr.ecr.ap-southeast-2.amazonaws.com/mattray/national-parks:latest
+    ports:
+      - "8080:8080"
+    links:
+      - mongo
+    command: --peer mongodb --bind database:mongodb.default
+```
 
 From the example, the ```mongo``` and ```national-parks``` services use the Docker images from the ECR. The ```links``` entry manages the deployment order of the container and according to the [Docker Compose documentation](https://docs.docker.com/engine/userguide/networking/default_network/dockerlinks/#/updating-the-etchosts-file) ```links``` should create ```/etc/hosts``` entries. This does not appear to currently work with ECS so we assign the ```hostname: "mongodb"```.
 
