--- a/www/source/partials/docs/_dev-pkgs-add-configuration.html.md.erb
+++ b/www/source/partials/docs/_dev-pkgs-add-configuration.html.md.erb
@@ -12,11 +12,15 @@ Template variables, also referred to as tags, are indicated by double curly brac
 
 Here's an example of how to make a configuration element user-tunable. Assume that we have a native configuration file named `service.conf`. In `service.conf`, the following configuration element is defined:
 
-    recv_buffer 128
+```conf
+recv_buffer 128
+```
 
 We can make this user tunable like this:
 
-    recv_buffer {{cfg.recv_buffer}}
+```handlebars
+recv_buffer {{cfg.recv_buffer}}
+```
 
 Habitat can read values that it will use to render the templatize
 config files in three ways:
@@ -29,7 +33,9 @@ apply`. The input for this command also uses the TOML format.
 Here's what we'd add to our project's `default.toml` file to provide a
 default value for the `recv_buffer` tunable:
 
-    recv_buffer = 128
+```toml
+recv_buffer = 128
+```
 
 <h1 id="branching-looping" class="anchor">Branching and looping</h1>
 
@@ -39,9 +45,11 @@ value exists or iterating through a list of items.
 Block expressions use a helper function to perform the logic. The
 syntax is the same for all block expressions and looks like this:
 
-    {{#helper blockname}}
-      {{expression}}
-    {{/helper}}
+```handlebars
+{{#helper blockname}}
+  {{expression}}
+{{/helper}}
+```
 
 Habitat supports the standard [built-in helpers](http://handlebarsjs.com/builtin_helpers.html):
 
@@ -64,50 +72,62 @@ blocks.
 Here's an example that will only write out configuration for the
 unixsocket tunable if a value was set by the user:
 
-    {{~#if cfg.unixsocket}}
-    unixsocket {{cfg.unixsocket}}
-    {{~/if}}
+```handlebars
+{{~#if cfg.unixsocket}}
+unixsocket {{cfg.unixsocket}}
+{{~/if}}
+```
 
 > Note: The `~` indicates that whitespace should be omitted when rendering
 
 TOML allows you to create sections (called [TOML tables](https://github.com/toml-lang/toml#table)) to better organize your configuration variables. For example, your `default.toml` or user defined TOML could have a `[repl]` section for variables controlling replication behavior. Here's what that looks like:
 
-    [repl]
-    backlog-size = 200
-    backlog-ttl = 100
-    disable-tcp-nodelay = no
+```toml default.toml
+[repl]
+backlog-size = 200
+backlog-ttl = 100
+disable-tcp-nodelay = no
+```
 
 When writing your template, you can use the `with` helper to reduce duplication:
 
-    {{#with cfg.repl}}
-      repl-backlog-size {{backlog-size}}
-      repl-backlog-ttl {{backlog-ttl}}
-      repl-disable-tcp-nodelay {{disable-tcp-nodelay}}
-    {{/with}}
+```handlebars
+{{#with cfg.repl}}
+  repl-backlog-size {{backlog-size}}
+  repl-backlog-ttl {{backlog-ttl}}
+  repl-disable-tcp-nodelay {{disable-tcp-nodelay}}
+{{/with}}
+```
 
 Helpers can also be nested and used together in block expressions. Here is another example from the redis.config file where the `if` and `with` helpers are used together to set up `core/redis` Habitat services  in a leader-follower topology.
 
-    {{#if svc.me.follower}}
-      slaveof {{svc.leader.sys.ip}} {{svc.leader.cfg.port}}
-    {/if}}
+```handlebars
+{{#if svc.me.follower}}
+  slaveof {{svc.leader.sys.ip}} {{svc.leader.cfg.port}}
+{/if}}
+```
 
 Here's an example using `each` to render multiple server entries:
 
-    {{~#each cfg.servers as |server| }}
-    server {
-      host {{server.host}}
-      port {{server.port}}
-    }
-    {{~/each}}
+```handlebars
+{{~#each cfg.servers as |server| }}
+server {
+  host {{server.host}}
+  port {{server.port}}
+}
+{{~/each}}
+```
 
 You would specify the corresponding values in a TOML file using an
 [array of tables](https://github.com/toml-lang/toml#array-of-tables)
 like this:
 
-    [[servers]]
-    host = "host-1"
-    port = 4545
+```toml default.toml
+[[servers]]
+host = "host-1"
+port = 4545
 
-    [[servers]]
-    host = "host-2"
-    port = 3434
+[[servers]]
+host = "host-2"
+port = 3434
+```
