--- a/www/source/partials/docs/_dev-pkgs-write-plans.html.md.erb
+++ b/www/source/partials/docs/_dev-pkgs-write-plans.html.md.erb
@@ -6,7 +6,7 @@ At the center of Habitat packaging is the plan. This is a directory comprised of
 
 As a way to start to understand plans, let's look at an example `plan.sh` for [sqlite](http://www.sqlite.org/):
 
-~~~ bash
+```bash plan.sh
 pkg_name=sqlite
 pkg_version=3130000
 pkg_origin=core
@@ -23,7 +23,7 @@ pkg_build_deps=(core/gcc core/make core/coreutils)
 pkg_lib_dirs=(lib)
 pkg_include_dirs=(include)
 pkg_bin_dirs=(bin)
-~~~
+```
 
 It has the name of the software, the version, where to download it, a checksum to verify the contents are what we expect, run dependencies on `core/glibc` and `core/readline`, build dependencies on `core/coreutils`, `core/make`, `core/gcc`, libraries files in `lib`, header files in `include`, and a binary file in `bin`. Also, because it's a core plan, it has a description and upstream URL for the source project included.
 
@@ -54,17 +54,21 @@ All plans must have a `plan.sh` at the root of the plan context. This file will 
 
     To use `hab plan init` as part of your project repo, navigate to the root of your project repo and run `hab plan init`. It will create a new `habitat` sub-directory with a plan.sh based on the name of the parent directory, and include a `default.toml` file as well as `config` and `hooks` directories for you to populate as needed. For example:
 
-        cd /path/to/<reponame>
-        hab plan init
+    ```shell
+    $ cd /path/to/<reponame>
+    $ hab plan init
+    ```
 
     will result in a new `habitat` directory located at `/path/to/<reponame>/habitat`. A plan.sh file will be created and the `pkg_name` variable in plan.sh will be set to _\<reponame\>_. Also, any environment variables that you have previouly set (such as `HAB_ORIGIN`) will be used to populate the respective `pkg_*` variables.
 
     If you want to auto-populate more of the `pkg_*` variables, you also have the option of setting them when calling `hab plan init`, as shown in the following example:
 
-        env pkg_svc_user=someuser pkg_deps="(core/make core/coreutils)" \
-           pkg_license="('MIT' 'Apache-2.0')" pkg_bin_dirs="(bin sbin)" \
-           pkg_version=1.0.0 pkg_description="foo" pkg_maintainer="you" \
-           hab plan init yourplan
+    ```shell
+    $ env pkg_svc_user=someuser pkg_deps="(core/make core/coreutils)" \
+       pkg_license="('MIT' 'Apache-2.0')" pkg_bin_dirs="(bin sbin)" \
+       pkg_version=1.0.0 pkg_description="foo" pkg_maintainer="you" \
+       hab plan init yourplan
+    ```
 
      See [hab plan init](/docs/reference#hab-plan-init) for more information on how to use this subcommand.
 
@@ -108,7 +112,7 @@ Add in the `pkg_source` value that points to where your source files are located
 
 Habitat supports retrieving source files from [GitHub](https://github.com). When cloning from GitHub, it is recommended to use https URIs because they are proxy friendly, whereas `git@github` or `git://` are not. To download the source from a GitHub repository, implement `do_download()` in your plan.sh and add a reference the `core/git` package as a build dependency. Because Habitat does not contain a system-wide CA cert bundle, you must use the `core/cacerts` package and export the `GIT_SSL_CAINFO` environment variable to point the `core/cacerts` package. Here’s an example of how to do this in the `do_download()` callback.
 
-~~~ bash
+```bash
 do_download() {
   export GIT_SSL_CAINFO="$(pkg_path_for core/cacerts)/ssl/certs/cacert.pem"
   git clone https://github.com/chef/chef
@@ -120,7 +124,7 @@ do_download() {
       --exclude chef/.git --exclude chef/spec
   pkg_shasum=$(trim $(sha256sum $HAB_CACHE_SRC_PATH/${pkg_filename} | cut -d " " -f 1))
 }
-~~~
+```
 
 After you have either specified your source in `pkg_source`, or overridden the **do_download()** callback, create a sha256 checksum for your source archive and enter it as the `pkg_shasum` value. The build script will verify this after it has downloaded the archive.
 
@@ -130,7 +134,7 @@ If your package does not download any application or service source files, then 
 
 #### Define your dependencies
 
-Applications have two types of dependencies: buildtime and runtime. 
+Applications have two types of dependencies: buildtime and runtime.
 
 Declare any build dependencies in `pkg_build_deps` and any run dependencies in `pkg_deps`. You can include version and release information when declaring dependencies if your application is bound to a particular version.
 
@@ -142,7 +146,7 @@ There is a third type of dependencies, transitive dependencies, that are the run
 
 As shown in an example above, there are occasions when you want to override the default behavior of the hab-plan-build script. The Plan syntax guide lists the default implementations for [build phase callbacks](/docs/reference/#reference-callbacks), but if you need to reference specific packages in the process of building your applications or services, then you need to override the default implementations as in the example below.
 
-~~~ bash
+```bash
 pkg_name=httpd
 pkg_origin=core
 pkg_version=2.4.18
@@ -172,7 +176,7 @@ do_build() {
               --enable-modules=most --enable-mods-shared=most
   make
 }
-~~~
+```
 
 In this example, the `core/httpd` plan references several other core packages through the use of the `pkg_path_for` function before `make` is called. You can use a similar pattern if you need reference a binary or library when building your source files.
 
