--- a/www/source/partials/tutorials/_run_app_common.html.md.erb
+++ b/www/source/partials/tutorials/_run_app_common.html.md.erb
@@ -1,6 +1,6 @@
-Services can currently be run in two ways: natively on a modern, 64-bit Linux distribution with the kernel version 
-greater than 2.6.32, or in a supported external runtime format. Running services natively allows you to rapidly install 
-and test your services on bare metal machines or VMs, but exporting your package into a different runtime 
+Services can currently be run in two ways: natively on a modern, 64-bit Linux distribution with the kernel version
+greater than 2.6.32, or in a supported external runtime format. Running services natively allows you to rapidly install
+and test your services on bare metal machines or VMs, but exporting your package into a different runtime
 format provides flexibility in where your packages run.
 
 Because this version of the tutorial shows how to use Habitat with Docker containers, we will use Docker Compose to run the containers created in the previous step.
@@ -9,7 +9,7 @@ Because this version of the tutorial shows how to use Habitat with Docker contai
 
 When you cloned the `sample-rails-app` repo, a `docker-compose.yml` file was included in the root of the directory.
 
-```yaml
+```yaml ~/sample-rails-app/docker-compose.yml
 version: '3'
 services:
   db:
@@ -33,7 +33,7 @@ Let's quickly review the file to understand how these containers will be brought
 
 * The port number for the Rails container is exposed so you can view the Rails app page from within your host browser.
 
-* The entrypoint for the Rails container has a few additional command arguments to connect it to the database container and set the [binding](/docs/developing-packages#pkg-binds) to the appropriate database service group. 
+* The entrypoint for the Rails container has a few additional command arguments to connect it to the database container and set the [binding](/docs/developing-packages#pkg-binds) to the appropriate database service group.
 
 Now that you understand how the docker-compose.yml file will be used, open the docker-compose.yml file in a text editor and update the following line with the name of your origin, if you built your image locally. If you used Builder to create a container and push it to Docker Hub, specify the Docker Hub organization/repository information instead.
 
