--- a/www/source/partials/tutorials/_sample_app_add_hooks.html.md.erb
+++ b/www/source/partials/tutorials/_sample_app_add_hooks.html.md.erb
@@ -1,9 +1,9 @@
-Habitat provides basic health monitoring for your running service; however, if you want to 
-perform custom tests or other status checks, you can customize your plan to do that. This is 
-done by using a `health_check` hook, which is a script that responds to a specific event during the lifecycle 
+Habitat provides basic health monitoring for your running service; however, if you want to
+perform custom tests or other status checks, you can customize your plan to do that. This is
+done by using a `health_check` hook, which is a script that responds to a specific event during the lifecycle
 of a running service.
 
-There are multiple hooks that you can define in your plan. For example, the `init` and `run` hooks are responsible 
+There are multiple hooks that you can define in your plan. For example, the `init` and `run` hooks are responsible
 for defining behavior during initialization and when the child service/application starts up. The Ruby scaffolding
 creates the initialization for you to handle connecting to a backend database and the build script used by the Studio
 creates a generic run hook. However, to create the `health_check` hook, you have to perform the following operations:
@@ -11,7 +11,7 @@ creates a generic run hook. However, to create the `health_check` hook, you have
 1. Change directory to `hooks`.
 
 <% if !is_windows %>
-    ```console
+    ```shell
     $ cd hooks
     ```
 <% end %>
@@ -19,34 +19,34 @@ creates a generic run hook. However, to create the `health_check` hook, you have
 <% if is_windows %>
 
     ```powershell
-    PS > cd hooks
+    $ cd hooks
     ```
 <% end %>
 2. Create a new file named `health_check`.
 
 <% if !is_windows %>
-    ```
+    ```shell
     $ touch health_check
     ```
 <% end %>
 
 <% if is_windows %>
     ```powershell
-    PS > New-Item -ItemType file health_check
+    $ New-Item -ItemType file health_check
     ```
 <% end %>
 3. Open `health_check` in your text editor.
-4. Hooks use [shebangs](https://en.wikipedia.org/wiki/Shebang_(Unix)) to decide which interpreter to use when running their scripts. 
+4. Hooks use [shebangs](https://en.wikipedia.org/wiki/Shebang_(Unix)) to decide which interpreter to use when running their scripts.
 In the case of the hook in our plan, we will use the system shell, so add the following to the `health_check` hook file:
 
-    ```bash
+    ```bash ~/sample-rails-app/habitat/hooks/health_check
     #!/bin/sh
     #
 
     # default return code is 0
     rc=0
 
-    # This request will test whether our index page can be retrieved. 
+    # This request will test whether our index page can be retrieved.
     {{pkgPathFor "core/curl"}}/bin/curl -sS --head --fail --max-time 1 http://localhost:{{cfg.app.port}}/
 
     case $? in
