--- a/www/source/partials/tutorials/_web_guide_connect_database.slim
+++ b/www/source/partials/tutorials/_web_guide_connect_database.slim
@@ -2,14 +2,14 @@ section
  h1 Connect to a Database
 
  - if "#{current_page.data.platform_short}" == "ruby"
-   p As part of the parsing logic of your Gemfile, the Ruby scaffolding detects any database gems that you have added and modifies the <code>init</code> hook and other setup scripts that it creates to provide a default customizable configuration behavior. The connection logic provided in the scaffolding also allows you to connect your web application to a database in a number of ways such as through containers, virtual machines, database cloud services, and so on. 
-   
-   p The Ruby scaffolding will set up this connection logic for PostgreSQL databases assuming your Gemfile contains any of the following PostgreSQL database gems specified in the #{link_to 'Ruby scaffolding reference topic','https://github.com/habitat-sh/core-plans/blob/master/scaffolding-ruby/doc/reference.md#postgresql-database-detection'}. 
+   p As part of the parsing logic of your Gemfile, the Ruby scaffolding detects any database gems that you have added and modifies the <code>init</code> hook and other setup scripts that it creates to provide a default customizable configuration behavior. The connection logic provided in the scaffolding also allows you to connect your web application to a database in a number of ways such as through containers, virtual machines, database cloud services, and so on.
+
+   p The Ruby scaffolding will set up this connection logic for PostgreSQL databases assuming your Gemfile contains any of the following PostgreSQL database gems specified in the #{link_to 'Ruby scaffolding reference topic','https://github.com/habitat-sh/core-plans/blob/master/scaffolding-ruby/doc/reference.md#postgresql-database-detection'}.
 
  p This topic covers the following areas:
 
  ul
-  li #{link_to 'Setting service bindings','#setting-bindings'} 
+  li #{link_to 'Setting service bindings','#setting-bindings'}
   li #{link_to 'Setting database connection values','#setting-values'}
   li #{link_to 'Connecting to a database running inside a Docker container','#connect-docker'}
   li #{link_to 'Connecting to a PostgreSQL cluster running in VMs','#connect-vms'}
@@ -17,34 +17,32 @@ section
 
  h2 <a name="setting-bindings">Setting service bindings</a>
 
- p Service bindings allows runtime configuration values for one service group to be shared with another service group, forming a producer/consumer relationship. When you want to share out configuration data with another service group, you must add the <code>pkg_exports</code> setting to your plan.sh. The following shows how the #{current_page.data.platform} scaffolding exports a port key for consuming services, such as a reverse proxy or load balancer. 
+ p Service bindings allows runtime configuration values for one service group to be shared with another service group, forming a producer/consumer relationship. When you want to share out configuration data with another service group, you must add the <code>pkg_exports</code> setting to your plan.sh. The following shows how the #{current_page.data.platform} scaffolding exports a port key for consuming services, such as a reverse proxy or load balancer.
 
- pre
-  code
+ = code(:bash) do
    |
     pkg_exports=([port]=app.port)
 
  p This will expose the following from the default.toml created by the scaffolding:
 
  = partial "/partials/tutorials/web_guide_#{current_page.data.platform_short}_app_port"
- 
+
  p  Conversely, if your web application wants to bind to a key, such as a port from a database, you need to either use the <code>pkg_binds</code> or <code>pkg_binds_optional</code> settings in your plan.sh. This requires that you know what keys are exported by the producer service group.
 
  = partial "/partials/global/exports_examples"
 
  p Once you have identified the key or keys of the producer that you want to consume in your web application, add that information to your plan.sh file.
 
- pre
-  code
-   | 
+ = code(:bash) do
+   |
     pkg_binds=( [elasticsearch]="http-port transport-port" )
 
  p For more examples and information on binding, see #{link_to 'Runtime Binding','/docs/developing-packages#pkg-binds'}.
- 
+
  - if "#{current_page.data.platform_short}" == "ruby"
    blockquote
     p <b>Important</b> If the Ruby scaffolding detects that your web application references the <code>pg</code> gem in your Gemfile.lock, the scaffolding will create and set <code>pkg_binds_optional</code> to a binding called "database" with the key called "port". This maps to the exported key named "port" from the <code>core/postgresql</code> package.
- 
+
  h2 <a name="setting-values">Setting database connection values</a>
 
  = partial "/partials/tutorials/web_guide_#{current_page.data.platform_short}_database"
@@ -53,51 +51,58 @@ section
 
  p This is the easiest scenario and useful for local testing of service binding between your database package. Assuming you are connecting to a PostgreSQL database, export the <code>core/postgresql</code> package to a Docker container as you did for your web application.
 
- pre
-  code $ hab studio enter
+ = code(:shell) do
+   |
+    $ hab studio enter
 
- pre
-  code # hab pkg export docker core/postgresql && exit
+ = code(:studio) do
+   |
+    $ hab pkg export docker core/postgresql && exit
 
- p Once you've created Docker containers for both your web application and the PostgreSQL database package, you can either open two terminal windows and start them up via <code>docker run</code> commands, or use Docker Compose to start them up together. 
+ p Once you've created Docker containers for both your web application and the PostgreSQL database package, you can either open two terminal windows and start them up via <code>docker run</code> commands, or use Docker Compose to start them up together.
 
  h3 Using containers directly
 
  p If you want to run the Docker containers directly, open two terminal windows and run the following:
 
- pre
-  code $ docker run -it core/postgresql
+ = code(:shell) do
+   |
+    $ docker run -it core/postgresql
 
- pre
-  code $ docker run -it <origin>/<package> --peer <DB_IP_ADDRESS> --bind database:postgresql.default
+ = code(:shell) do
+   |
+    $ docker run -it <origin>/<package> --peer <DB_IP_ADDRESS> --bind database:postgresql.default
 
  p The example above requires that you get the IPv4 address of the running PostgreSQL container, which you can retrieve by using the <code>docker inspect</code> command.
 
- pre
-  code $ docker inspect CONTAINERID | grep "IPAddress"
+ = code(:shell) do
+   |
+    $ docker inspect CONTAINERID | grep "IPAddress"
 
  h3 Using Docker Compose
 
  p The other option is to use a tool such as Docker Compose to bring up both services. The <code>docker-compose.yml</code> used in the #{link_to 'Run the Sample App', 'https://www.habitat.sh/tutorials/sample-app/mac/run-app/'} step of the Build a Sample App tutorial can be modified and used for your iterative development needs.
 
- p Create a <code>docker-compose.yml</code> to bring up both your web application and database containers. The volume being shared assumes that you place the <code>docker-compose.yml</code> at the root of your local project repo. 
- 
+ p Create a <code>docker-compose.yml</code> to bring up both your web application and database containers. The volume being shared assumes that you place the <code>docker-compose.yml</code> at the root of your local project repo.
+
  p Replace <code>origin/package</code> with the values for your web application.
 
  = partial "/partials/tutorials/web_guide_#{current_page.data.platform_short}_docker_compose"
 
  p The next step is to bring up the containers.
 
- pre
-  code $ docker-compose up
+ = code(:shell) do
+   |
+    $ docker-compose up
 
  - if "#{current_page.data.platform_short}" == "ruby"
    p As the Habitat packages initialize, you should see an error in the output that specifies that your web application cannot connect to the database container. This is because the particular database specified by your web application (<code>yourapp_production</code>) has not been set up, so you will need to do this manually. The credentials you provided in your <code>habitat/default.toml</code> file will give you the permission to do this when running the following command:
 
-   pre
-    code $ docker-compose exec yourapp yourapp-rake db:setup
+   = code(:shell) do
+     |
+      $ docker-compose exec yourapp yourapp-rake db:setup
 
- p Your web app and database should now be up and running in Docker containers. You can validate this on your local workstation by browsing to https://localhost:8000/someendpoint. 
+ p Your web app and database should now be up and running in Docker containers. You can validate this on your local workstation by browsing to https://localhost:8000/someendpoint.
 
  h2 <a name="connect-vms">Connecting to a PostgreSQL cluster running in VMs</a>
 
@@ -112,8 +117,7 @@ section
 
  p The first step is to install the Habitat CLI onto each machine and then add the <code>hab</code> user and group to the machine. Because currently most Habitat packages run in Linux environments natively, each of your machines should be running a Linux distributon with the kernel greater than or equal to 2.6.32.
 
- pre
-  code
+ = code(:shell) do
    |
     $ curl https://raw.githubusercontent.com/habitat-sh/habitat/master/components/hab/install.sh | sudo bash
     $ sudo groupadd hab
@@ -121,13 +125,15 @@ section
 
  p Now, in one of these three instances, run the following command to both install <code>core/postgresql</code> and start a Supervisor ring:
 
- pre
-  code $ sudo hab start core/postgresql --topology leader --group production
+ = code(:shell) do
+   |
+    $ sudo hab start core/postgresql --topology leader --group production
 
  p Then, in each of the other two instances, run this command:
 
- pre
-  code $ sudo hab start core/postgresql --topology leader --group production --peer first_instance_public_ip_address
+ = code(:shell) do
+   |
+    $ sudo hab start core/postgresql --topology leader --group production --peer first_instance_public_ip_address
 
  p This will connect them with the first instance and create a Supervisor ring. When all three are up, you will see them hold an election and select a leader.
 
@@ -139,13 +145,12 @@ section
 
  p Now, match that private IP to one of your instances and then copy the public IP of that instance.
 
- p Open up <code>habitat/default.toml</code> and replace the value for the <code>host</code> key with that public ip address. 
- 
+ p Open up <code>habitat/default.toml</code> and replace the value for the <code>host</code> key with that public ip address.
+
  blockquote
   p <b>Note</b> It does need to be the public ip of the leader in order to work.
 
- pre
-  code
+ = code(:toml, title: 'habitat/default.toml') do
    |
     [db]
     user = "admin"
@@ -154,18 +159,20 @@ section
 
  p Now re-enter back the Studio, build your package again, and then export that new package into a docker image.
 
- pre
-  code
+ = code(:shell) do
    |
     $ hab studio enter
-    # build
-    # hab pkg export docker ./results/&lt;hart-filename>.hart && exit
+
+ = code(:shell) do
+   |
+    $ build
+    $ hab pkg export docker ./results/&lt;hart-filename>.hart && exit
 
  p Run the docker container for your web application.
 
  = partial "/partials/tutorials/web_guide_#{current_page.data.platform_short}_docker_run"
 
- p As part of the general workflow of using your web app, you need to setup the database from your web application container. 
+ p As part of the general workflow of using your web app, you need to setup the database from your web application container.
 
  = partial "/partials/tutorials/web_guide_#{current_page.data.platform_short}_db_setup"
 
@@ -175,8 +182,7 @@ section
 
  p Default values are fine, but make sure to note what you set these two values as:
 
- pre
-  code
+ = code(:plaintext) do
    |
     master username
     master password
@@ -185,10 +191,9 @@ section
 
  p Once the RDS instance is up, update the <code>habitat/default.toml</code> file in your local project repo.
 
- p Modify it so that the <code>db.user</code> matches the username you set for your RDS instance and the <code>db.password</code> matches the password you set for your RDS instance. Finally, you also need to add in <code>db.host</code> and set it to the endpoint for your RDS instance (you can get this from the AWS GUI or cli). Do not include the port number in the endpoint. The value should be "https://my_endpoint" not "https://my_endpoint:5432". 
+ p Modify it so that the <code>db.user</code> matches the username you set for your RDS instance and the <code>db.password</code> matches the password you set for your RDS instance. Finally, you also need to add in <code>db.host</code> and set it to the endpoint for your RDS instance (you can get this from the AWS GUI or cli). Do not include the port number in the endpoint. The value should be "https://my_endpoint" not "https://my_endpoint:5432".
 
- pre
-  code
+ = code(:toml, title: 'habitat/default.toml') do
    |
     [db]
     user = "rds_instance_username"
@@ -197,18 +202,20 @@ section
 
  p Save <code>habitat/default.toml</code>, re-enter the Studio, build your package, and export that newly built package as a Docker image.
 
- pre
-  code
+ = code(:shell) do
    |
     $ hab studio enter
-    # build
-    # hab pkg export docker ./results/&lt;hart-filename>.hart && exit
+
+ = code(:studio) do
+   |
+    $ build
+    $ hab pkg export docker ./results/&lt;hart-filename>.hart && exit
 
  p Because you're not interacting with another Habitat package as in the previous section, you do not need to set the service binding or join a ring with another service. Simply run the Docker container for your web application and set an exposed port so you can browse to your web application from your local workstation
- 
+
  = partial "/partials/tutorials/web_guide_#{current_page.data.platform_short}_docker_run"
 
- p And just as in the previous section, you need to setup the database from your web application container. 
+ p And just as in the previous section, you need to setup the database from your web application container.
 
  = partial "/partials/tutorials/web_guide_#{current_page.data.platform_short}_db_setup"
 
