--- a/www/source/partials/tutorials/_web_guide_node_docker_compose.slim
+++ b/www/source/partials/tutorials/_web_guide_node_docker_compose.slim
@@ -1,16 +1,15 @@
-pre
-  code.yaml
-   | 
-     version: '3'
-     services:
-       db:
-         image: core/postgresql
-         volumes:
-           - "./habitat/default.toml:/default.toml"
-       railsapp:
-           image: origin/package
-           ports:
-             - 8080:8080
-           links:
-           - db
-           command: --peer db --bind database:postgresql.default
+= code(:yaml) do
+  |
+   version: '3'
+   services:
+     db:
+       image: core/postgresql
+       volumes:
+         - "./habitat/default.toml:/default.toml"
+     railsapp:
+         image: origin/package
+         ports:
+           - 8080:8080
+         links:
+         - db
+         command: --peer db --bind database:postgresql.default
