--- a/www/source/partials/tutorials/_web_guide_ruby_default_variables.slim
+++ b/www/source/partials/tutorials/_web_guide_ruby_default_variables.slim
@@ -1,16 +1,14 @@
 p By default, the Ruby scaffolding creates the following items in the <code>scaffolding_env</code> array for you:
 
-pre
- code
+= code(:handlebars) do
   |
    scaffolding_env[LANG]="{{cfg.lang}}"
    scaffolding_env[PORT]="{{cfg.app.port}}"
 
 p If you are packaging up a Rails app v4.1 or later, the following additional items will be added to your <code>scaffolding_env</code> array:
 
-pre
- code
-  | 
+= code(:handlebars) do
+  |
    scaffolding_env[RAILS_ENV]="{{cfg.rails_env}}"
    scaffolding_env[RACK_ENV]="{{cfg.rack_env}}"
    scaffolding_env[RAILS_LOG_TO_STDOUT]="enabled" (only if your railties gem is v5.0.0 or later)
